[package]
name = "auto_downloader"
version = "0.1.0"
edition = "2021"
authors = ["Bader alotaibi baderalotaibi3@gmail.com"]
description = "Rust cargo crates with auto-update functionality."
repository = "https://github.com/bdr-pro/auto_downloader.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
sha2 = "0.10.8"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
